6.7/api/Files/index_files.md
---
title: Files

---

# Files




* **dir [Applications](../Files/dir_8c1195e4829fa17630c4278c41da729a.md#dir-applications)** 
    * **dir [Applications/shapeworks](../Files/dir_486a45e6ebc11931a27093b877e14af3.md#dir-applications/shapeworks)** 
        * **file [Applications/shapeworks/Command.h](../Files/Command_8h.md#file-command.h)** 
        * **file [Applications/shapeworks/Commands.h](../Files/Commands_8h.md#file-commands.h)** 
        * **file [Applications/shapeworks/Executable.h](../Files/Executable_8h.md#file-executable.h)** 
        * **file [Applications/shapeworks/SharedCommandData.h](../Files/SharedCommandData_8h.md#file-sharedcommanddata.h)** 
* **dir [Documentation](../Files/dir_cb8980ab440f994989990a6313097edf.md#dir-documentation)** 
    * **dir [Documentation/Doxygen](../Files/dir_b61e4180fa497c41c4b364a945b36efe.md#dir-documentation/doxygen)** 
* **dir [Libs](../Files/dir_6e6cb9563333489fde7459b1f95e59a5.md#dir-libs)** 
    * **dir [Libs/Alignment](../Files/dir_c8a30dba58b805ee2d567ab327483fca.md#dir-libs/alignment)** 
        * **dir [Libs/Alignment/Transforms](../Files/dir_3c387d8f52af5a1c9b80596228515621.md#dir-libs/alignment/transforms)** 
            * **file [Libs/Alignment/Transforms/itkAdvancedTransform.h](../Files/itkAdvancedTransform_8h.md#file-itkadvancedtransform.h)** 
            * **file [Libs/Alignment/Transforms/itkCompactlySupportedRBFSparseKernelTransform.h](../Files/itkCompactlySupportedRBFSparseKernelTransform_8h.md#file-itkcompactlysupportedrbfsparsekerneltransform.h)** 
            * **file [Libs/Alignment/Transforms/itkKernelTransform2.h](../Files/itkKernelTransform2_8h.md#file-itkkerneltransform2.h)** 
            * **file [Libs/Alignment/Transforms/itkSparseKernelTransform.h](../Files/itkSparseKernelTransform_8h.md#file-itksparsekerneltransform.h)** 
            * **file [Libs/Alignment/Transforms/itkThinPlateSplineKernelTransform2.h](../Files/itkThinPlateSplineKernelTransform2_8h.md#file-itkthinplatesplinekerneltransform2.h)** 
        * **file [Libs/Alignment/Procrustes3D.h](../Files/Procrustes3D_8h.md#file-procrustes3d.h)** 
    * **dir [Libs/Analyze](../Files/dir_d77cc112773b74d11448b7fad9142c8e.md#dir-libs/analyze)** 
        * **file [Libs/Analyze/Analyze.h](../Files/Analyze_8h.md#file-analyze.h)** 
        * **file [Libs/Analyze/CustomSurfaceReconstructionFilter.h](../Files/CustomSurfaceReconstructionFilter_8h.md#file-customsurfacereconstructionfilter.h)** 
        * **file [Libs/Analyze/ItkToVtk.h](../Files/ItkToVtk_8h.md#file-itktovtk.h)** 
        * **file [Libs/Analyze/LegacyMeshGenerator.h](../Files/LegacyMeshGenerator_8h.md#file-legacymeshgenerator.h)** <br>Mesh generation. 
        * **file [Libs/Analyze/MeshCache.h](../Files/MeshCache_8h.md#file-meshcache.h)** 
        * **file [Libs/Analyze/MeshGenerator.h](../Files/MeshGenerator_8h.md#file-meshgenerator.h)** <br>Mesh generation. 
        * **file [Libs/Analyze/MeshGroup.h](../Files/MeshGroup_8h.md#file-meshgroup.h)** 
        * **file [Libs/Analyze/MeshManager.h](../Files/MeshManager_8h.md#file-meshmanager.h)** 
        * **file [Libs/Analyze/MeshWorkQueue.h](../Files/MeshWorkQueue_8h.md#file-meshworkqueue.h)** 
        * **file [Libs/Analyze/MeshWorker.h](../Files/MeshWorker_8h.md#file-meshworker.h)** <br>Worker class for parallel mesh reconstruction. 
        * **file [Libs/Analyze/ParticleArea.h](../Files/ParticleArea_8h.md#file-particlearea.h)** 
        * **file [Libs/Analyze/Particles.h](../Files/Particles_8h.md#file-particles.h)** 
        * **file [Libs/Analyze/QMeshWarper.h](../Files/QMeshWarper_8h.md#file-qmeshwarper.h)** 
        * **file [Libs/Analyze/Reconstruction.h](../Files/Reconstruction_8h.md#file-reconstruction.h)** 
        * **file [Libs/Analyze/Shape.h](../Files/Shape_8h.md#file-shape.h)** 
        * **file [Libs/Analyze/StudioEnums.h](../Files/StudioEnums_8h.md#file-studioenums.h)** 
        * **file [Libs/Analyze/StudioMesh.h](../Files/StudioMesh_8h.md#file-studiomesh.h)** 
        * **file [Libs/Analyze/SurfaceReconstructor.h](../Files/SurfaceReconstructor_8h.md#file-surfacereconstructor.h)** <br>Surface [Reconstruction](../Classes/classReconstruction.md) Layer. 
        * **file [Libs/Analyze/vtkPolyDataToImageData.h](../Files/vtkPolyDataToImageData_8h.md#file-vtkpolydatatoimagedata.h)** 
    * **dir [Libs/Application](../Files/dir_9ab7bf277be286941ed03c100233212b.md#dir-libs/application)** 
        * **dir [Libs/Application/DeepSSM](../Files/dir_6a983b09072555944f6e4668cf5f99a9.md#dir-libs/application/deepssm)** 
            * **file [Libs/Application/DeepSSM/DeepSSMJob.h](../Files/DeepSSMJob_8h.md#file-deepssmjob.h)** 
        * **dir [Libs/Application/Job](../Files/dir_d0685ddcbfeb436aff8439708f351fe6.md#dir-libs/application/job)** 
            * **file [Libs/Application/Job/Job.h](../Files/Job_8h.md#file-job.h)** 
            * **file [Libs/Application/Job/PythonWorker.h](../Files/PythonWorker_8h.md#file-pythonworker.h)** 
        * **file [Libs/Application/ShapeWorksVtkOutputWindow.h](../Files/ShapeWorksVtkOutputWindow_8h.md#file-shapeworksvtkoutputwindow.h)** 
    * **dir [Libs/Common](../Files/dir_c13ed27a749775eeb2d59234813cae48.md#dir-libs/common)** 
        * **file [Libs/Common/Logging.h](../Files/Logging_8h.md#file-logging.h)** 
        * **file [Libs/Common/Profiling.h](../Files/Profiling_8h.md#file-profiling.h)** 
        * **file [Libs/Common/Region.h](../Files/Region_8h.md#file-region.h)** 
        * **file [Libs/Common/Shapeworks.h](../Files/Shapeworks_8h.md#file-shapeworks.h)** 
        * **file [Libs/Common/ShapeworksUtils.h](../Files/ShapeworksUtils_8h.md#file-shapeworksutils.h)** 
    * **dir [Libs/Groom](../Files/dir_c8ce71b7fc76205395f44c2291e69b75.md#dir-libs/groom)** 
        * **file [Libs/Groom/Groom.h](../Files/Groom_8h.md#file-groom.h)** 
        * **file [Libs/Groom/GroomParameters.h](../Files/GroomParameters_8h.md#file-groomparameters.h)** 
    * **dir [Libs/Image](../Files/dir_9e4ba78685e6608cfdea07960abd189c.md#dir-libs/image)** 
        * **file [Libs/Image/Image.h](../Files/Image_8h.md#file-image.h)** 
        * **file [Libs/Image/ImageUtils.h](../Files/ImageUtils_8h.md#file-imageutils.h)** 
        * **file [Libs/Image/VectorImage.h](../Files/VectorImage_8h.md#file-vectorimage.h)** 
        * **file [Libs/Image/itkTPGACLevelSetImageFilter.h](../Files/itkTPGACLevelSetImageFilter_8h.md#file-itktpgaclevelsetimagefilter.h)** 
    * **dir [Libs/Mesh](../Files/dir_36d0ece48b2c599ca7cdf3fcf70a4111.md#dir-libs/mesh)** 
        * **dir [Libs/Mesh/PreviewMeshQC](../Files/dir_409787ee32d93aa6a212981d92e6dc9a.md#dir-libs/mesh/previewmeshqc)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEAreaCoverage.h](../Files/FEAreaCoverage_8h.md#file-feareacoverage.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEAutoMesher.h](../Files/FEAutoMesher_8h.md#file-feautomesher.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FECVDDecimationModifier.h](../Files/FECVDDecimationModifier_8h.md#file-fecvddecimationmodifier.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FECoreMesh.h](../Files/FECoreMesh_8h.md#file-fecoremesh.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEElement.h](../Files/FEElement_8h.md#file-feelement.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEFillHole.h](../Files/FEFillHole_8h.md#file-fefillhole.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEFixMesh.h](../Files/FEFixMesh_8h.md#file-fefixmesh.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEMesh.h](../Files/FEMesh_8h.md#file-femesh.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEMeshSmoothingModifier.h](../Files/FEMeshSmoothingModifier_8h.md#file-femeshsmoothingmodifier.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FENodeElementList.h](../Files/FENodeElementList_8h.md#file-fenodeelementlist.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FENodeFaceList.h](../Files/FENodeFaceList_8h.md#file-fenodefacelist.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FENodeNodeList.h](../Files/FENodeNodeList_8h.md#file-fenodenodelist.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEVTKExport.h](../Files/FEVTKExport_8h.md#file-fevtkexport.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEVTKImport.h](../Files/FEVTKImport_8h.md#file-fevtkimport.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/Intersect.h](../Files/Intersect_8h.md#file-intersect.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/math3d.h](../Files/math3d_8h.md#file-math3d.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/stdafx.h](../Files/stdafx_8h.md#file-stdafx.h)** 
        * **file [Libs/Mesh/Mesh.h](../Files/Mesh_8h.md#file-mesh.h)** 
        * **file [Libs/Mesh/MeshComputeThickness.h](../Files/MeshComputeThickness_8h.md#file-meshcomputethickness.h)** 
        * **file [Libs/Mesh/MeshUtils.h](../Files/MeshUtils_8h.md#file-meshutils.h)** 
        * **file [Libs/Mesh/MeshWarper.h](../Files/MeshWarper_8h.md#file-meshwarper.h)** <br>Mesh warping capability. 
        * **file [Libs/Mesh/itkMultiplyByConstantImageFilter.h](../Files/itkMultiplyByConstantImageFilter_8h.md#file-itkmultiplybyconstantimagefilter.h)** 
        * **file [Libs/Mesh/meshFIM.h](../Files/meshFIM_8h.md#file-meshfim.h)** 
    * **dir [Libs/Optimize](../Files/dir_f02d5d8e81e1edd3722111e50e18938d.md#dir-libs/optimize)** 
        * **file [Libs/Optimize/CorrespondenceMode.h](../Files/CorrespondenceMode_8h.md#file-correspondencemode.h)** 
        * **file [Libs/Optimize/EarlyStoppingConfig.h](../Files/EarlyStoppingConfig_8h.md#file-earlystoppingconfig.h)** 
        * **file [Libs/Optimize/GradientDescentOptimizer.h](../Files/GradientDescentOptimizer_8h.md#file-gradientdescentoptimizer.h)** 
        * **dir [Libs/Optimize/Constraints](../Files/dir_aee3ea6bcd7d0f0da850c3e9fd33d5af.md#dir-libs/optimize/constraints)** 
            * **file [Libs/Optimize/Constraints/Constraint.h](../Files/Constraint_8h.md#file-constraint.h)** 
            * **file [Libs/Optimize/Constraints/ConstraintType.h](../Files/ConstraintType_8h.md#file-constrainttype.h)** 
            * **file [Libs/Optimize/Constraints/Constraints.h](../Files/Constraints_8h.md#file-constraints.h)** 
            * **file [Libs/Optimize/Constraints/FreeFormConstraint.h](../Files/FreeFormConstraint_8h.md#file-freeformconstraint.h)** 
            * **file [Libs/Optimize/Constraints/PlaneConstraint.h](../Files/PlaneConstraint_8h.md#file-planeconstraint.h)** 
        * **dir [Libs/Optimize/Container](../Files/dir_8703d550aef9c899d5cf3c4cd311a554.md#dir-libs/optimize/container)** 
            * **file [Libs/Optimize/Container/GenericContainer.h](../Files/GenericContainer_8h.md#file-genericcontainer.h)** 
            * **file [Libs/Optimize/Container/GenericContainerArray.h](../Files/GenericContainerArray_8h.md#file-genericcontainerarray.h)** 
            * **file [Libs/Optimize/Container/MeanCurvatureContainer.h](../Files/MeanCurvatureContainer_8h.md#file-meancurvaturecontainer.h)** 
        * **dir [Libs/Optimize/Domain](../Files/dir_b92c77c85671879e4c48e03051777b7e.md#dir-libs/optimize/domain)** 
            * **file [Libs/Optimize/Domain/ContourDomain.h](../Files/ContourDomain_8h.md#file-contourdomain.h)** 
            * **file [Libs/Optimize/Domain/DomainType.h](../Files/DomainType_8h.md#file-domaintype.h)** 
            * **file [Libs/Optimize/Domain/ImageDomain.h](../Files/ImageDomain_8h.md#file-imagedomain.h)** 
            * **file [Libs/Optimize/Domain/ImageDomainWithCurvature.h](../Files/ImageDomainWithCurvature_8h.md#file-imagedomainwithcurvature.h)** 
            * **file [Libs/Optimize/Domain/ImageDomainWithGradN.h](../Files/ImageDomainWithGradN_8h.md#file-imagedomainwithgradn.h)** 
            * **file [Libs/Optimize/Domain/ImageDomainWithGradients.h](../Files/ImageDomainWithGradients_8h.md#file-imagedomainwithgradients.h)** 
            * **file [Libs/Optimize/Domain/ImplicitSurfaceDomain.h](../Files/ImplicitSurfaceDomain_8h.md#file-implicitsurfacedomain.h)** 
            * **file [Libs/Optimize/Domain/MeshDomain.h](../Files/MeshDomain_8h.md#file-meshdomain.h)** 
            * **file [Libs/Optimize/Domain/MeshGeoEntry.h](../Files/MeshGeoEntry_8h.md#file-meshgeoentry.h)** 
            * **file [Libs/Optimize/Domain/ParticleDomain.h](../Files/ParticleDomain_8h.md#file-particledomain.h)** 
            * **file [Libs/Optimize/Domain/ParticleRegionDomain.h](../Files/ParticleRegionDomain_8h.md#file-particleregiondomain.h)** 
            * **file [Libs/Optimize/Domain/Surface.h](../Files/Surface_8h.md#file-surface.h)** 
        * **dir [Libs/Optimize/Function](../Files/dir_0e4564af99249380ef1f30404400c0a3.md#dir-libs/optimize/function)** 
            * **file [Libs/Optimize/Function/CorrespondenceFunction.h](../Files/CorrespondenceFunction_8h.md#file-correspondencefunction.h)** 
            * **file [Libs/Optimize/Function/DisentangledCorrespondenceFunction.h](../Files/DisentangledCorrespondenceFunction_8h.md#file-disentangledcorrespondencefunction.h)** 
            * **file [Libs/Optimize/Function/DualVectorFunction.h](../Files/DualVectorFunction_8h.md#file-dualvectorfunction.h)** 
            * **file [Libs/Optimize/Function/LegacyCorrespondenceFunction.h](../Files/LegacyCorrespondenceFunction_8h.md#file-legacycorrespondencefunction.h)** 
            * **dir [Libs/Optimize/Function/EarlyStop](../Files/dir_714a13efdf7ee1e2759ceed0978ff76a.md#dir-libs/optimize/function/earlystop)** 
                * **file [Libs/Optimize/Function/EarlyStop/EarlyStopping.h](../Files/EarlyStopping_8h.md#file-earlystopping.h)** 
                * **file [Libs/Optimize/Function/EarlyStop/MorphologicalDeviationScore.h](../Files/MorphologicalDeviationScore_8h.md#file-morphologicaldeviationscore.h)** 
            * **file [Libs/Optimize/Function/SamplingFunction.h](../Files/SamplingFunction_8h.md#file-samplingfunction.h)** 
            * **file [Libs/Optimize/Function/VectorFunction.h](../Files/VectorFunction_8h.md#file-vectorfunction.h)** 
        * **dir [Libs/Optimize/Matrix](../Files/dir_18c9fb63c9ecb061d3bfcf14463b37a6.md#dir-libs/optimize/matrix)** 
            * **file [Libs/Optimize/Matrix/LegacyShapeMatrix.h](../Files/LegacyShapeMatrix_8h.md#file-legacyshapematrix.h)** 
            * **file [Libs/Optimize/Matrix/LinearRegressionShapeMatrix.h](../Files/LinearRegressionShapeMatrix_8h.md#file-linearregressionshapematrix.h)** 
            * **file [Libs/Optimize/Matrix/MixedEffectsShapeMatrix.h](../Files/MixedEffectsShapeMatrix_8h.md#file-mixedeffectsshapematrix.h)** 
            * **file [Libs/Optimize/Matrix/ShapeGradientMatrix.h](../Files/ShapeGradientMatrix_8h.md#file-shapegradientmatrix.h)** 
            * **file [Libs/Optimize/Matrix/ShapeMatrix.h](../Files/ShapeMatrix_8h.md#file-shapematrix.h)** 
        * **dir [Libs/Optimize/Neighborhood](../Files/dir_37dfc33913c47c48c20c22cdbf1559c0.md#dir-libs/optimize/neighborhood)** 
            * **file [Libs/Optimize/Neighborhood/ParticleNeighborhood.h](../Files/ParticleNeighborhood_8h.md#file-particleneighborhood.h)** 
            * **file [Libs/Optimize/Neighborhood/ParticlePointIndexPair.h](../Files/ParticlePointIndexPair_8h.md#file-particlepointindexpair.h)** 
        * **dir [Libs/Optimize/Utils](../Files/dir_85653c7ab6d0c0e003ea454a8b2baba9.md#dir-libs/optimize/utils)** 
            * **file [Libs/Optimize/Utils/MemoryUsage.h](../Files/MemoryUsage_8h.md#file-memoryusage.h)** 
            * **file [Libs/Optimize/Utils/ObjectReader.h](../Files/ObjectReader_8h.md#file-objectreader.h)** 
            * **file [Libs/Optimize/Utils/ObjectWriter.h](../Files/ObjectWriter_8h.md#file-objectwriter.h)** 
            * **file [Libs/Optimize/Utils/OptimizationVisualizer.h](../Files/OptimizationVisualizer_8h.md#file-optimizationvisualizer.h)** 
            * **file [Libs/Optimize/Utils/ParticleGaussianModeWriter.h](../Files/ParticleGaussianModeWriter_8h.md#file-particlegaussianmodewriter.h)** 
            * **file [Libs/Optimize/Utils/ParticleGoodBadAssessment.h](../Files/ParticleGoodBadAssessment_8h.md#file-particlegoodbadassessment.h)** 
        * **file [Libs/Optimize/Observer.h](../Files/Observer_8h.md#file-observer.h)** 
        * **file [Libs/Optimize/Optimize.h](../Files/Optimize_8h.md#file-optimize.h)** 
        * **file [Libs/Optimize/OptimizeParameterFile.h](../Files/OptimizeParameterFile_8h.md#file-optimizeparameterfile.h)** 
        * **file [Libs/Optimize/OptimizeParameters.h](../Files/OptimizeParameters_8h.md#file-optimizeparameters.h)** 
        * **file [Libs/Optimize/ParticleEvents.h](../Files/ParticleEvents_8h.md#file-particleevents.h)** 
        * **file [Libs/Optimize/ParticleSystem.h](../Files/ParticleSystem_8h.md#file-particlesystem.h)** 
        * **file [Libs/Optimize/ProcrustesRegistration.h](../Files/ProcrustesRegistration_8h.md#file-procrustesregistration.h)** 
        * **file [Libs/Optimize/Sampler.h](../Files/Sampler_8h.md#file-sampler.h)** 
    * **dir [Libs/Particles](../Files/dir_f6c26397dfcef1d1f5f1786f8168e7dd.md#dir-libs/particles)** 
        * **file [Libs/Particles/EvaluationUtil.h](../Files/EvaluationUtil_8h.md#file-evaluationutil.h)** 
        * **file [Libs/Particles/ParticleFile.h](../Files/ParticleFile_8h.md#file-particlefile.h)** 
        * **file [Libs/Particles/ParticleNormalEvaluation.h](../Files/ParticleNormalEvaluation_8h.md#file-particlenormalevaluation.h)** 
        * **file [Libs/Particles/ParticleShapeStatistics.h](../Files/ParticleShapeStatistics_8h.md#file-particleshapestatistics.h)** 
        * **file [Libs/Particles/ParticleSystemEvaluation.h](../Files/ParticleSystemEvaluation_8h.md#file-particlesystemevaluation.h)** 
        * **file [Libs/Particles/ReconstructSurface.h](../Files/ReconstructSurface_8h.md#file-reconstructsurface.h)** 
        * **file [Libs/Particles/ShapeEvaluation.h](../Files/ShapeEvaluation_8h.md#file-shapeevaluation.h)** 
    * **dir [Libs/Project](../Files/dir_4ea27a77bf632cd63100af8008b8abf4.md#dir-libs/project)** 
        * **file [Libs/Project/DeepSSMParameters.h](../Files/DeepSSMParameters_8h.md#file-deepssmparameters.h)** 
        * **file [Libs/Project/ExcelProjectReader.h](../Files/ExcelProjectReader_8h.md#file-excelprojectreader.h)** 
        * **file [Libs/Project/ExcelProjectWriter.h](../Files/ExcelProjectWriter_8h.md#file-excelprojectwriter.h)** 
        * **file [Libs/Project/JsonProjectReader.h](../Files/JsonProjectReader_8h.md#file-jsonprojectreader.h)** 
        * **file [Libs/Project/JsonProjectWriter.h](../Files/JsonProjectWriter_8h.md#file-jsonprojectwriter.h)** 
        * **file [Libs/Project/Parameters.h](../Files/Parameters_8h.md#file-parameters.h)** 
        * **file [Libs/Project/Project.h](../Files/Project_8h.md#file-project.h)** 
        * **file [Libs/Project/ProjectReader.h](../Files/ProjectReader_8h.md#file-projectreader.h)** 
        * **file [Libs/Project/ProjectUtils.h](../Files/ProjectUtils_8h.md#file-projectutils.h)** 
        * **file [Libs/Project/Subject.h](../Files/Subject_8h.md#file-subject.h)** 
        * **file [Libs/Project/Variant.h](../Files/Variant_8h.md#file-variant.h)** 
    * **dir [Libs/Python](../Files/dir_6cd87311705ab44b460cce19838a0cf5.md#dir-libs/python)** 
        * **file [Libs/Python/PythonAnalyze.h](../Files/PythonAnalyze_8h.md#file-pythonanalyze.h)** 
        * **file [Libs/Python/PythonGroom.h](../Files/PythonGroom_8h.md#file-pythongroom.h)** 
        * **file [Libs/Python/pybind_utils.h](../Files/pybind__utils_8h.md#file-pybind-utils.h)** 
    * **dir [Libs/Utils](../Files/dir_73a09fceee206218e6d903b3c5deb969.md#dir-libs/utils)** 
        * **file [Libs/Utils/EigenUtils.h](../Files/EigenUtils_8h.md#file-eigenutils.h)** 
        * **file [Libs/Utils/PlatformUtils.h](../Files/PlatformUtils_8h.md#file-platformutils.h)** 
        * **file [Libs/Utils/StringUtils.h](../Files/StringUtils_8h.md#file-stringutils.h)** 
        * **file [Libs/Utils/Utils.h](../Files/Utils_8h.md#file-utils.h)** 
* **file [Module.dox](../Files/Module_8dox.md#file-module.dox)** 
* **dir [Studio](../Files/dir_baf8d66207f3fc39faf866e67ca98ce2.md#dir-studio)** 
    * **dir [Studio/Analysis](../Files/dir_2efd803177123288b92908ec296fe578.md#dir-studio/analysis)** 
        * **file [Studio/Analysis/AnalysisTool.h](../Files/AnalysisTool_8h.md#file-analysistool.h)** 
        * **file [Studio/Analysis/ParticleAreaPanel.h](../Files/ParticleAreaPanel_8h.md#file-particleareapanel.h)** 
        * **file [Studio/Analysis/ShapeEvaluationJob.h](../Files/ShapeEvaluationJob_8h.md#file-shapeevaluationjob.h)** 
        * **file [Studio/Analysis/ShapeScalarPanel.h](../Files/ShapeScalarPanel_8h.md#file-shapescalarpanel.h)** 
    * **dir [Studio/Data](../Files/dir_b0b944fd4368961b4965dd28c72a00a2.md#dir-studio/data)** 
        * **file [Studio/Data/DataTool.h](../Files/DataTool_8h.md#file-datatool.h)** 
        * **file [Studio/Data/ExportUtils.h](../Files/ExportUtils_8h.md#file-exportutils.h)** 
        * **file [Studio/Data/LandmarkItemDelegate.h](../Files/LandmarkItemDelegate_8h.md#file-landmarkitemdelegate.h)** 
        * **file [Studio/Data/LandmarkTableModel.h](../Files/LandmarkTableModel_8h.md#file-landmarktablemodel.h)** 
        * **file [Studio/Data/MeshSettings.h](../Files/MeshSettings_8h.md#file-meshsettings.h)** 
        * **file [Studio/Data/Preferences.h](../Files/Preferences_8h.md#file-preferences.h)** 
        * **file [Studio/Data/PreferencesWindow.h](../Files/PreferencesWindow_8h.md#file-preferenceswindow.h)** 
        * **file [Studio/Data/SegmentationToolPanel.h](../Files/SegmentationToolPanel_8h.md#file-segmentationtoolpanel.h)** 
        * **file [Studio/Data/Session.h](../Files/Session_8h.md#file-session.h)** 
        * **file [Studio/Data/ShapeWorksWorker.h](../Files/ShapeWorksWorker_8h.md#file-shapeworksworker.h)** 
        * **file [Studio/Data/Telemetry.h](../Files/Telemetry_8h.md#file-telemetry.h)** 
        * **file [Studio/Data/Worker.h](../Files/Worker_8h.md#file-worker.h)** 
    * **dir [Studio/DeepSSM](../Files/dir_e938d55d0d25a8e3889ca0b02966a6b3.md#dir-studio/deepssm)** 
        * **file [Studio/DeepSSM/DeepSSMTool.h](../Files/DeepSSMTool_8h.md#file-deepssmtool.h)** 
    * **dir [Studio/Groom](../Files/dir_4481568adb70067b4bb4b5ce096891b2.md#dir-studio/groom)** 
        * **file [Studio/Groom/GroomTool.h](../Files/GroomTool_8h.md#file-groomtool.h)** 
    * **dir [Studio/Interface](../Files/dir_f27aadd9c7f02e71212dbf7893d91496.md#dir-studio/interface)** 
        * **file [Studio/Interface/CompareWidget.h](../Files/CompareWidget_8h.md#file-comparewidget.h)** 
        * **file [Studio/Interface/CustomSlider.h](../Files/CustomSlider_8h.md#file-customslider.h)** 
        * **file [Studio/Interface/ExportImageDialog.h](../Files/ExportImageDialog_8h.md#file-exportimagedialog.h)** 
        * **file [Studio/Interface/KeyboardShortcuts.h](../Files/KeyboardShortcuts_8h.md#file-keyboardshortcuts.h)** 
        * **file [Studio/Interface/LogWindow.h](../Files/LogWindow_8h.md#file-logwindow.h)** 
        * **file [Studio/Interface/ShapeWorksStudioApp.h](../Files/ShapeWorksStudioApp_8h.md#file-shapeworksstudioapp.h)** 
        * **file [Studio/Interface/SplashScreen.h](../Files/SplashScreen_8h.md#file-splashscreen.h)** 
        * **file [Studio/Interface/StatusBarWidget.h](../Files/StatusBarWidget_8h.md#file-statusbarwidget.h)** 
        * **file [Studio/Interface/StudioLogger.h](../Files/StudioLogger_8h.md#file-studiologger.h)** 
        * **file [Studio/Interface/Style.h](../Files/Style_8h.md#file-style.h)** 
        * **file [Studio/Interface/UpdateChecker.h](../Files/UpdateChecker_8h.md#file-updatechecker.h)** 
        * **file [Studio/Interface/WheelEventForwarder.h](../Files/WheelEventForwarder_8h.md#file-wheeleventforwarder.h)** 
    * **dir [Studio/Job](../Files/dir_7d4dd3d8a2b1d1a0e92682acfb57f0f0.md#dir-studio/job)** 
        * **file [Studio/Job/GroupPvalueJob.h](../Files/GroupPvalueJob_8h.md#file-grouppvaluejob.h)** 
        * **file [Studio/Job/NetworkAnalysisJob.h](../Files/NetworkAnalysisJob_8h.md#file-networkanalysisjob.h)** 
        * **file [Studio/Job/ParticleAreaJob.h](../Files/ParticleAreaJob_8h.md#file-particleareajob.h)** 
        * **file [Studio/Job/ParticleNormalEvaluationJob.h](../Files/ParticleNormalEvaluationJob_8h.md#file-particlenormalevaluationjob.h)** 
        * **file [Studio/Job/ShapeScalarJob.h](../Files/ShapeScalarJob_8h.md#file-shapescalarjob.h)** 
        * **file [Studio/Job/StatsGroupLDAJob.h](../Files/StatsGroupLDAJob_8h.md#file-statsgroupldajob.h)** 
    * **dir [Studio/Optimize](../Files/dir_9e99c41d3802fada2a0119d079df0956.md#dir-studio/optimize)** 
        * **file [Studio/Optimize/OptimizeTool.h](../Files/OptimizeTool_8h.md#file-optimizetool.h)** 
        * **file [Studio/Optimize/QOptimize.h](../Files/QOptimize_8h.md#file-qoptimize.h)** 
    * **dir [Studio/Resources](../Files/dir_a4bc8cdb2751c8604311dac5c98fb558.md#dir-studio/resources)** 
        * **file [Studio/Resources/resource.h](../Files/resource_8h.md#file-resource.h)** 
    * **dir [Studio/ShapeWorksMONAI](../Files/dir_3ac71cfeb9e8c31aa5ca4ffc7168c68d.md#dir-studio/shapeworksmonai)** 
        * **file [Studio/ShapeWorksMONAI/MonaiLabelJob.h](../Files/MonaiLabelJob_8h.md#file-monailabeljob.h)** 
        * **file [Studio/ShapeWorksMONAI/MonaiLabelTool.h](../Files/MonaiLabelTool_8h.md#file-monailabeltool.h)** 
        * **file [Studio/ShapeWorksMONAI/MonaiLabelUtils.h](../Files/MonaiLabelUtils_8h.md#file-monailabelutils.h)** 
    * **dir [Studio/Utils](../Files/dir_645c19d7da098e01621cdebb663b8767.md#dir-studio/utils)** 
        * **file [Studio/Utils/AnalysisUtils.h](../Files/AnalysisUtils_8h.md#file-analysisutils.h)** 
        * **file [Studio/Utils/ImageLabel.h](../Files/ImageLabel_8h.md#file-imagelabel.h)** 
        * **file [Studio/Utils/StackWalker.h](../Files/StackWalker_8h.md#file-stackwalker.h)** 
        * **file [Studio/Utils/StudioUtils.h](../Files/StudioUtils_8h.md#file-studioutils.h)** 
        * **file [Studio/Utils/WindowsCrashHandler.h](../Files/WindowsCrashHandler_8h.md#file-windowscrashhandler.h)** 
    * **dir [Studio/Visualization](../Files/dir_b6c1f9d4f6080dc79a7a9d2c69150815.md#dir-studio/visualization)** 
        * **file [Studio/Visualization/ColorMap.h](../Files/ColorMap_8h.md#file-colormap.h)** 
        * **file [Studio/Visualization/ColorSchemes.h](../Files/ColorSchemes_8h.md#file-colorschemes.h)** 
        * **file [Studio/Visualization/LandmarkWidget.h](../Files/LandmarkWidget_8h.md#file-landmarkwidget.h)** 
        * **file [Studio/Visualization/Lightbox.h](../Files/Lightbox_8h.md#file-lightbox.h)** 
        * **file [Studio/Visualization/MeshSlice.h](../Files/MeshSlice_8h.md#file-meshslice.h)** 
        * **file [Studio/Visualization/PaintWidget.h](../Files/PaintWidget_8h.md#file-paintwidget.h)** 
        * **file [Studio/Visualization/ParticleColors.h](../Files/ParticleColors_8h.md#file-particlecolors.h)** 
        * **file [Studio/Visualization/PlaneWidget.h](../Files/PlaneWidget_8h.md#file-planewidget.h)** 
        * **file [Studio/Visualization/SliceView.h](../Files/SliceView_8h.md#file-sliceview.h)** 
        * **file [Studio/Visualization/StudioHandleWidget.h](../Files/StudioHandleWidget_8h.md#file-studiohandlewidget.h)** 
        * **file [Studio/Visualization/StudioImageActorPointPlacer.h](../Files/StudioImageActorPointPlacer_8h.md#file-studioimageactorpointplacer.h)** 
        * **file [Studio/Visualization/StudioInteractorStyle.h](../Files/StudioInteractorStyle_8h.md#file-studiointeractorstyle.h)** 
        * **file [Studio/Visualization/StudioSliceInteractorStyle.h](../Files/StudioSliceInteractorStyle_8h.md#file-studiosliceinteractorstyle.h)** 
        * **file [Studio/Visualization/Viewer.h](../Files/Viewer_8h.md#file-viewer.h)** 
        * **file [Studio/Visualization/Visualizer.h](../Files/Visualizer_8h.md#file-visualizer.h)** 



-------------------------------

Updated on 2025-10-11 at 04:45:09 +0000
